--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <span class="close-button" onclick="hideModal()">&times;</span>
       <h2>Script</h2>
       <div class="script-container" id="scriptText">
-        loadstring(game:HttpGet("https://raw.githubusercontent.com/yngleantop1/NEWLTCHUB-Lodear/refs/heads/main/LoaderLTCHU(NEW).lua"))()
+        loadstring(game:HttpGet("https://raw.githubusercontent.com/yngleantop1/LTCHUBV2Loader/refs/heads/main/LTCHUBV2Loader.lua"))()
       </div>
       <button class="copy-button" onclick="copyScript()">Copy Script</button>
     </div>
